feat: 반환용(순환참조 방지) 단순 DTO 생성